# DnaFeaturesViewer

./: .gitignore  LICENSE  README.md  pypi-readme.rst  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml
dna_features_viewer/: GraphicFeature.py  __init__.py
dna_features_viewer/BiopythonTranslator/: BiopythonTranslator.py
dna_features_viewer/CircularGraphicRecord/: ArrowWedge.py  CircularGraphicRecord.py
dna_features_viewer/FootprintViewer/: README.md  __init__.py  api.py  data_processor.py  genbank_creator.py  visualizer.py
dna_features_viewer/GraphicRecord/: GraphicRecord.py  MatplotlibPlottableMixin.py  SequenceAndTranslationMixin.py
docs/: Makefile  conf.py  examples.rst  index.rst  ref.rst  requirements.txt  tips.rst
examples/FootprintViewer/: FootprintViewer_example.ipynb
examples/FootprintViewer/data/: arabidopsis_inflorescence_test.parquet  arabidopsis_leaf_test.parquet  arabidopsis_root_test.parquet  arabidopsis_test.gff3
tests/data/: example_sequence.gb
tmp/: test.ipynb
